--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,20 @@ body {
     background-color: rgb(0, 12, 100);
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 2rem;
 }
 
 button {
     cursor: pointer;
     z-index: 100;
+}
+
+#autoplay-cont button {
+    padding: .5rem;
+    margin: .25rem;
 }
 
 #container {
