--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,14 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+:root {
+    --darkblue: rgb(0, 0, 50);
+    --lightblue: rgb(0, 0, 150);
+    --yellow: rgb(255, 238, 110);
+}
+
 body {
-    background-color: rgb(0, 12, 100);
+    background: linear-gradient(to right, var(--darkblue), var(--lightblue), var(--darkblue));
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -18,6 +24,9 @@ body {
 button {
     cursor: pointer;
     z-index: 100;
+    padding: .25rem;
+    background: var(--yellow);
+    color: var(--lightblue)
 }
 
 #autoplay-cont button {
@@ -28,6 +37,8 @@ button {
 #container {
     display: flex;
     height: 300px;
+    border: 1px solid var(--yellow);
+    box-shadow: 0 0 5px var(--yellow);
 }
 
 
@@ -46,9 +57,10 @@ button {
 #info-cont {
     color: white;
     position: absolute;
-    right: 2%;
+    padding-right: 10px;
     bottom: 5%;
     text-align: right;
+    background: rgba(0,0,0,0.5);
 }
 
 #thumbnails-cont {
